Adds barebones for navbar

--- a/src/app/navigation-bar/navigation-bar.html
+++ b/src/app/navigation-bar/navigation-bar.html
@@ -1,1 +1,28 @@
-<p>navigation-bar works!</p>
+<nav>
+    <ul id="navBar">
+        <li>
+            <a href="/">
+                <img
+                    id="logo"
+                    src="assets/logo.png"
+                    alt=""
+                />
+            </a>
+        </li>
+        <li>
+            <a href="/experiences">Experiences</a>
+        </li>
+        <li>
+            <a href="/lodging">Lodging</a>
+        </li>
+        <li>
+            <a href="/food-and-drinks">Food & Drinks</a>
+        </li>
+        <li>
+            <a href="/transportation">Transportation</a>
+        </li>
+        <li>
+            <a href="/planning">Planning</a>
+        </li>
+    </ul>
+</nav>
