Changed navigation-bar component to site-header component.

--- a/src/app/site-header/site-header.html
+++ b/src/app/site-header/site-header.html
@@ -10,19 +10,19 @@
             </a>
         </li>
         <li>
-            <a href="/experiences">Experiences</a>
+            <a routerLink="/experiences">Experiences</a>
         </li>
         <li>
-            <a href="/lodging">Lodging</a>
+            <a routerLink="/lodging">Lodging</a>
         </li>
         <li>
-            <a href="/food-and-drinks">Food & Drinks</a>
+            <a routerLink="/food-and-drinks">Food & Drinks</a>
         </li>
         <li>
-            <a href="/transportation">Transportation</a>
+            <a routerLink="/transportation">Transportation</a>
         </li>
         <li>
-            <a href="/planning">Planning</a>
+            <a routerLink="/planning">Planning</a>
         </li>
     </ul>
 </nav>
