--- a/src/app/site-header/site-header.scss
+++ b/src/app/site-header/site-header.scss
@@ -6,6 +6,7 @@
     justify-content: space-evenly;
     font-size: 1.7rem;
     // font-family: "Bad Script", cursive;
+    // font-family: "Poiret One", sans-serif;
 
     li {
         padding: 14px 20px;
