Adds styling to site-header.

--- a/src/app/site-header/site-header.html
+++ b/src/app/site-header/site-header.html
@@ -1,28 +1,32 @@
-<nav>
-    <ul id="navBar">
-        <li>
+<header class="site-header">
+    <div class="header-content">
+        <div class="logo-container">
             <a href="/">
                 <img
                     id="logo"
-                    src="assets/logo.png"
-                    alt=""
+                    src="assets/images/logo.png"
+                    alt="logo: island image"
                 />
             </a>
-        </li>
-        <li>
-            <a routerLink="/experiences">Experiences</a>
-        </li>
-        <li>
-            <a routerLink="/lodging">Lodging</a>
-        </li>
-        <li>
-            <a routerLink="/food-and-drinks">Food & Drinks</a>
-        </li>
-        <li>
-            <a routerLink="/transportation">Transportation</a>
-        </li>
-        <li>
-            <a routerLink="/planning">Planning</a>
-        </li>
-    </ul>
-</nav>
+        </div>
+        <nav>
+            <ul id="navBar">
+                <li>
+                    <a routerLink="/experiences">Experiences</a>
+                </li>
+                <li>
+                    <a routerLink="/lodging">Lodging</a>
+                </li>
+                <li>
+                    <a routerLink="/food-and-drinks">Food & Drinks</a>
+                </li>
+                <li>
+                    <a routerLink="/transportation">Transportation</a>
+                </li>
+                <li>
+                    <a routerLink="/faq">FAQs</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+</header>
