--- a/src/app/home/home.scss
+++ b/src/app/home/home.scss
@@ -36,9 +36,10 @@
 
 .gallery-container {
     width: 100vw;
+    margin-top: 50px;
     margin-left: -300px;
     margin-right: -300px;
-    margin-top: 50px;
+    margin-bottom: 100px;
     overflow: hidden;
     cursor: grab;
 }
@@ -46,7 +47,7 @@
 .gallery {
     display: flex;
     gap: 15px;
-    padding: 0 20px;
+    padding: 0 50px;
     user-select: none;
     transition: transform 0.1s ease-out;
 }
