--- a/src/app/home/home.scss
+++ b/src/app/home/home.scss
@@ -36,10 +36,7 @@
 
 .gallery-container {
     width: 100vw;
-    margin-top: 50px;
-    margin-left: -300px;
-    margin-right: -300px;
-    margin-bottom: 100px;
+    margin: 50px -300px 100px -300px;
     overflow: hidden;
     cursor: grab;
 }
