--- a/src/app/site-header/site-header.scss
+++ b/src/app/site-header/site-header.scss
@@ -67,7 +67,7 @@
                 right: -10px;
                 top: 50%;
                 transform: translateY(-50%);
-                color: black;
+                color: #666;
                 font-size: 27px;
             }
         }
@@ -77,7 +77,9 @@
             text-decoration: none;
 
             &:hover {
-                background-color: #575757;
+                color: #1e3a8a;
+                font-weight: 600;
+                text-shadow: #666;
             }
         }
     }
