Adds content and styling to foodAndDrinks page.
Reorganizes assets folder structure.

--- a/src/app/experiences/experiences.html
+++ b/src/app/experiences/experiences.html
@@ -11,7 +11,7 @@
             [class.active]="currentSlide === 0"
         >
             <img
-                src="assets/images/charter.jpg"
+                src="assets/experiences/charter.jpg"
                 alt="Boat Charter"
             />
             <div class="slide-text">
@@ -27,7 +27,7 @@
             [class.active]="currentSlide === 1"
         >
             <img
-                src="assets/images/snorkel.jpg"
+                src="assets/experiences/snorkeling.jpg"
                 alt="Snorkeling"
             />
             <div class="slide-text">
@@ -43,7 +43,7 @@
             [class.active]="currentSlide === 2"
         >
             <img
-                src="assets/images/golf.jpg"
+                src="assets/experiences/golf.jpg"
                 alt="Golf"
             />
             <div class="slide-text">
@@ -60,7 +60,7 @@
             [class.active]="currentSlide === 3"
         >
             <img
-                src="assets/images/helicopter.jpg"
+                src="assets/experiences/helicopter.jpg"
                 alt="Helicopter"
             />
             <div class="slide-text">
@@ -77,7 +77,7 @@
             [class.active]="currentSlide === 4"
         >
             <img
-                src="assets/images/volcano.jpg"
+                src="assets/experiences/volcano.jpg"
                 alt="Volcano"
             />
             <div class="slide-text">
@@ -94,7 +94,7 @@
             [class.active]="currentSlide === 5"
         >
             <img
-                src="assets/images/zipline.jpeg"
+                src="assets/experiences/zipline.jpeg"
                 alt="Zipline"
             />
             <div class="slide-text">
