--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,7 +1,7 @@
 <div id="home-content">
     <img
         id="hero-image"
-        src="assets/images/hero.jpg"
+        src="assets/gallery/hero.jpg"
         alt=""
     />
     <p id="hero-quote">Your adventure begins here</p>
