--- a/src/app/site-header/site-header.html
+++ b/src/app/site-header/site-header.html
@@ -4,7 +4,7 @@
             <a href="/">
                 <img
                     id="logo"
-                    src="assets/images/logo.png"
+                    src="assets/gallery/logo.png"
                     alt="logo: island image"
                 />
             </a>
