Adds content and styling to faqs page.

--- a/src/app/faq/faq.scss
+++ b/src/app/faq/faq.scss
@@ -54,7 +54,7 @@ $accent-color: #2563eb;
                 font-weight: 600;
             }
 
-            p {
+c:\Users\Sergio\Downloads\I-821.pdf            p {
                 color: black;
                 font-size: 1.3rem;
                 margin-bottom: 1rem;
